# grocery-prices

./: .gitignore  BACKLOG.md  README.md  deploy-infra.sh  deploy.sh  tunnel.sh
extract_server/: .env.example  README.md  auth.py  exception_handlers.py  extract_config.py  gemini-pricing.md  middleware.py  model-price-comparison.md  pyproject.toml  qwen-pricing.md  request_utils.py  run_benchmark.py  schemas.py  server.py  start.sh  user_stores.py  users_db.py  zai-pricing.md
extract_server/db/: __init__.py  _ids.py  _location.py  _product_fields.py  connection.py  photos.py  products.py  sightings.py  user_stores.py  users.py
extract_server/grocery_extract/: __init__.py  catalog_db.py  cursor_extractor.py  ingest.py  parse_response.py  photo_stores.py  pipeline.py  request_context.py  schema.py  scoring.py  user_paths.py  user_stores_db.py
extract_server/routes/: __init__.py  auth.py  media.py  photos.py  products.py  settings.py  stores.py
extract_server/scripts/: batch_extract_folder.py  benchmark_upload.py  benchmark_upload_breakdown.py  cleanup_test_users.py  experiment_common.py  extract_data_folder.py  extraction_stats.py  gemini_sanity.py  gemini_sanity_cursor.py  gemini_sanity_cursor_compare.py  glm_sanity.py  llm_model_experiment.py  llm_prompt_experiment.py  llm_resize_experiment.py  migrate_to_db.py  prompt_variants.py  qwen_sanity.py  rematch_all.py  remove_user.py  reset_db.py  similarity_experiment.py  similarity_experiment_llm.py  vision_runner.py
extract_server/tests/: conftest.py  helpers.py  test_api.py  test_api_delete.py  test_async_ingest.py  (+18 more)
(+439 files in other folders)
