[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery-extract-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "cursor-sdk>=0.1.8",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.0",
  "bcrypt>=4.0",
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
grocery-api = "extract_server.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
